Support passing input to fuzzypkg via launcher

--- a/fuzzypkg.desktop
+++ b/fuzzypkg.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Name=fuzzypkg
-Exec=env FDELAY=1 fuzzypkg
+Exec=env FDELAY=1 fuzzypkg %U
 Type=Application
 Terminal=true
 Icon=x-package-repository
